# mb6-space

./: .gitignore  BOARD.md  README.md  config.one  mkdocs.yml  module.ring  modules.ring  pyproject.toml  run-command.bash
dep/: install-pi3-60-static-eth0.yaml  install-pi3-dhcpd.conf
docs/: astuce-sudo.md  astuce-systemd.md  configure-pi3-DHCP.md  configure-pi3.md  configure-pi4.md  configure-station.md  configure-ubuntu.md  doc-ips.md  f.a.q.md  index.md  install.md  old20.04-configure-pi3.md  pkg-basic.md  pkg-multibot.md  robot-ezbot.md  robot-pibot.md  robot-stage.md  tuto-draft-cpp.md  tuto-draft-pkg.md
install/: local_setup.sh  setup.sh
install/basic_msgs/share/basic_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/basic_node/share/basic_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/communication_test/share/communication_test/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/draft_mb6/lib/draft_mb6/: talker
install/kobuki_core/lib/: libkobuki_core.so.1.4.0
launch/: stage_launch.yaml  swd_starter_kit_default.launch.py  swd_starter_kit_mb6.launch.py
pkg-draft/draft_mb6/: CMakeLists.txt  package.xml
pkg-draft/draft_mb6/scripts/: listerner
resources/: pibot.service  ssh_authorized_keys
rviz-conf/: pibot-with-map.rviz  simple-pibot.rviz  simple-scan.rviz  slam-monitor.rviz
script/: initialize-extra.sh  initialize-ros.sh  initialize-station.sh
(+564 files in other folders)
